chore: update folder

--- a/templates/laravel/docker-compose.yml
+++ b/templates/laravel/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 
 services:
-  major-app:
+  <name>-app:
     build:
       context: ./
       dockerfile: Dockerfile-laravel
-    container_name: major-app
+    container_name: <name>-app
     ports:
       - "8000:8000"
     volumes:
